[gd_scene load_steps=18 format=2]

[ext_resource path="res://script/Camera.gd" type="Script" id=1]
[ext_resource path="res://script/depth.gd" type="Script" id=2]
[ext_resource path="res://minimap.tscn" type="PackedScene" id=3]
[ext_resource path="res://texture/[2K]Metal21/Metal21_col.jpg" type="Texture" id=4]
[ext_resource path="res://texture/[2K]Metal21/Metal21_nrm.jpg" type="Texture" id=5]
[ext_resource path="res://texture/[2K]Metal21/Metal21_rgh.jpg" type="Texture" id=6]
[ext_resource path="res://material/bb2.tres" type="Material" id=7]
[ext_resource path="res://material/bb3.tres" type="Material" id=8]
[ext_resource path="res://material/bb4.tres" type="Material" id=9]
[ext_resource path="res://script/Button.gd" type="Script" id=10]

[sub_resource type="GDScript" id=1]
script/source = "extends Spatial

# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.

# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass



#"

[sub_resource type="PlaneMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.0509804, 0.160784, 0.231373, 1 )
metallic = 0.29
roughness = 0.53
depth_enabled = true
depth_scale = 0.05
depth_deep_parallax = false
depth_flip_tangent = false
depth_flip_binormal = false

[sub_resource type="CubeMesh" id=4]

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.8, 0.439216, 0.337255, 1 )
albedo_texture = ExtResource( 4 )
roughness = 0.73
roughness_texture = ExtResource( 6 )
normal_enabled = true
normal_scale = 1.0
normal_texture = ExtResource( 5 )

[sub_resource type="CapsuleMesh" id=6]

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.803922, 0.772549, 0.0941176, 1 )
metallic = 0.33
roughness = 0.55

[node name="global" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4.96481 )
script = SubResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0729713, 14.9767, 49.9861 )
script = ExtResource( 1 )

[node name="minimap" type="ViewportContainer" parent="."]
margin_left = -1.0
margin_top = 1.0
margin_right = 246.0
margin_bottom = 187.0

[node name="Viewport" type="Viewport" parent="minimap"]
size = Vector2( 200, 100 )
handle_input_locally = false
debug_draw = 2
render_target_update_mode = 3
script = ExtResource( 2 )

[node name="mini" parent="minimap/Viewport" instance=ExtResource( 3 )]

[node name="ground" type="MeshInstance" parent="."]
transform = Transform( 30, 0, 0, 0, 30, 0, 0, 0, 30, -0.0873451, 0.930784, -0.00462723 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="box1" type="MeshInstance" parent="."]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, -19.9901, 4.00189, -9.96523 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="point1" type="MeshInstance" parent="box1"]
transform = Transform( 0.1, 0, 0, 0, 0.0892101, 1.002, 0, -0.109734, -0.00284026, 0, 3.241, 0 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="Label1" type="Label" parent="box1"]
margin_left = 537.0
margin_top = 237.0
margin_right = 577.0
margin_bottom = 251.0

[node name="box2" type="MeshInstance" parent="."]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, -6.62667, 4, 20 )
mesh = SubResource( 4 )
material/0 = ExtResource( 7 )

[node name="Label2" type="Label" parent="box2"]
margin_left = 309.0
margin_top = 75.0
margin_right = 349.0
margin_bottom = 89.0

[node name="point2" type="MeshInstance" parent="box2"]
transform = Transform( 0.1, 0, 0, 0, 0.0892101, 1.002, 0, -0.109734, -0.00284026, 0, 3.05967, 0 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="box3" type="MeshInstance" parent="."]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 10, 4, 0 )
mesh = SubResource( 4 )
material/0 = ExtResource( 8 )

[node name="point3" type="MeshInstance" parent="box3"]
transform = Transform( 0.1, 0, 0, 0, 0.0892101, 1.002, 0, -0.109734, -0.00284026, 0.0562794, 3.18781, 0 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="Label3" type="Label" parent="box3"]
margin_left = 215.0
margin_top = 141.0
margin_right = 255.0
margin_bottom = 155.0

[node name="box4" type="MeshInstance" parent="."]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 20, 4, 10 )
mesh = SubResource( 4 )
material/0 = ExtResource( 9 )

[node name="point4" type="MeshInstance" parent="box4"]
transform = Transform( 0.1, 0, 0, 0, 0.0892101, 1.002, 0, -0.109734, -0.00284026, -0.0697227, 2.8688, 0.248886 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="Label4" type="Label" parent="box4"]
margin_left = 54.0
margin_top = 178.0
margin_right = 94.0
margin_bottom = 192.0

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.375186, 0.438287, -0.816786, -0.474496, 0.847766, 0.236954, 0.796297, 0.29866, 0.526035, 0, 28.6703, 4.76837e-007 )

[node name="Button" type="Button" parent="."]
margin_left = 954.0
margin_top = 555.0
margin_right = 1023.0
margin_bottom = 591.0
script = ExtResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="."]
